# homomorphic-dsp

./: .gitmodules  README.md
assets/: README.md
assets/mdl/PANN/: README.md
doc/: articles.md  ideas.md  pdf.md
exp01/: CMakeLists.txt  README.md  pyproject.toml
exp01/src/cpp/: fhe_server.cpp  json_mini.h  test_logic.cpp
exp01/src/py/: common.py  extract-kaldi-features.py  infere_mlp.py  inspect-features.py  load_pann.py  train.py  train_mlp.py
